--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,12 @@
-{
-    }
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  show-actuator: true
+server:
+  tomcat:
+    max-http-form-post-size: 50MB
+spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
